Migrate to java 16; add  command