@@ -1,4 +1,3 @@
-<?xml version="1.0"?>
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.andirady.mq</groupId>
@@ -6,14 +5,41 @@
     <version>0.0.1-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
+        <picocli.version>4.6.1</picocli.version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20210307</version>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>${picocli.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.12.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>info.picocli</groupId>
+            <artifactId>picocli</artifactId>
+            <version>4.6.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -23,34 +49,29 @@
                 <version>3.8.1</version>
             </plugin>
             <plugin>
-                <groupId>org.moditect</groupId>
-                <artifactId>moditect-maven-plugin</artifactId>
-                <version>1.0.0.RC1</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--add-opens com.github.andirady.mq/com.github.andirady.mq=ALL-UNNAMED</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.diffplug.spotless</groupId>
+                <artifactId>spotless-maven-plugin</artifactId>
+                <version>2.13.0</version>
+                <configuration>
+                    <java>
+                        <importOrder/>
+                        <removeUnusedImports/>
+                    </java>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>add-module-info-to-dependencies</id>
-                        <phase>generate-sources</phase>
+                        <id>diffplug</id>
+                        <phase>process-sources</phase>
                         <goals>
-                            <goal>add-module-info</goal>
+                            <goal>apply</goal>
                         </goals>
-                        <configuration>
-                            <outputDirectory>${project.build.directory}/modules</outputDirectory>
-                            <overwriteExistingFiles>true</overwriteExistingFiles>
-                            <modules>
-                                <module>
-                                    <artifact>
-                                        <groupId>org.json</groupId>
-                                        <artifactId>json</artifactId>
-                                        <version>20210307</version>
-                                    </artifact>
-                                    <moduleInfoSource>
-                                        module org.json {
-                                            exports org.json;
-                                        }
-                                    </moduleInfoSource>
-                                </module>
-                            </modules>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -65,6 +86,23 @@
             <build>
                 <plugins>
                     <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${maven.compiler.source}</source>
+                            <target>${maven.compiler.target}</target>
+                            <annotationProcessorPaths>
+                                <annotationProcessorPath>
+                                    <groupId>info.picocli</groupId>
+                                    <artifactId>picocli-codegen</artifactId>
+                                    <version>${picocli.version}</version>
+                                </annotationProcessorPath>
+                            </annotationProcessorPaths>
+                            <compilerArgs>
+                                <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
                         <groupId>org.graalvm.nativeimage</groupId>
                         <artifactId>native-image-maven-plugin</artifactId>
                         <version>${graalvm.version}</version>
@@ -78,12 +116,13 @@
                         </executions>
                         <configuration>
                             <imageName>mq</imageName>
-                            <mainClass>com.github.andirady.mq.MavenQuery</mainClass>
+                            <mainClass>com.github.andirady.mq.Main</mainClass>
                             <buildArgs>
-                                --enable-http
-                                --enable-https
-                                --no-fallback
-                            </buildArgs>
+								--enable-http
+								--enable-https
+								--no-fallback
+								--report-unsupported-elements-at-runtime
+							</buildArgs>
                         </configuration>
                     </plugin>
                 </plugins>
@@ -106,7 +145,7 @@
                                 <configuration>
                                     <classifier>jlink</classifier>
                                     <modulePaths>${project.build.directory}/modules</modulePaths>
-                                    <launcher>mq=com.github.andirady.mq/com.github.andirady.mq.MavenQuery</launcher>
+                                    <launcher>mq=com.github.andirady.mq/com.github.andirady.mq.Main</launcher>
                                 </configuration>
                             </execution>
                         </executions>
